<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >
           
		<GridLayout
      	    android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:columnCount="4">
   
          	<ImageView
          	    android:id="@+id/expense_imageview_picture"
          	    android:layout_column="0"
          	    android:layout_row="0"
        		android:layout_width="100dp"
        		android:layout_height="100dp"
        		android:scaleType="centerInside"
          	    android:contentDescription="@string/expense_picture_description" />
          	
          	<Button
          		android:id="@+id/expense_button_capture"
          		android:layout_row="0"
            	android:layout_column="1"
          		android:text="@string/expense_button_capture" />

       		<TextView
               	android:id="@+id/expense_textview_spend"
               	android:layout_row="1"
            	android:layout_column="0"
               	android:text="@string/expense_textview_spend"
               	android:textAppearance="?android:attr/textAppearanceSmall" />

           	<EditText
               	android:id="@+id/expense_edittext_spend"
               	android:layout_row="1"
            	android:layout_column="1"
            	android:layout_columnSpan="2"
               	android:ems="10"
               	android:inputType="number" >

               	<requestFocus />
           	</EditText>

           	<TextView
               	android:id="@+id/expense_textview_date"
               	android:layout_row="2"
            	android:layout_column="0"
               	android:text="@string/expense_textview_date"
               	android:textAppearance="?android:attr/textAppearanceSmall" />

           	<EditText
           	    android:id="@+id/expense_edittext_date"
           	    android:layout_row="2"
           	    android:layout_column="1"
           	    android:layout_columnSpan="2"
           	    android:inputType="date" />

           	<TextView
               	android:id="@+id/expense_textview_category"
               	android:layout_row="3"
            	android:layout_column="0"
               	android:text="@string/expense_textview_category"
               	android:textAppearance="?android:attr/textAppearanceSmall" />

           	<Spinner
               	android:id="@+id/expense_spinner_expense"
				android:layout_row="3"
            	android:layout_column="1"
            	android:layout_columnSpan="2"/>

           	<TextView
               	android:id="@+id/expense_textview_note"
               	android:layout_row="4"
            	android:layout_column="0"
               	android:text="@string/expense_textview_note"
               	android:textAppearance="?android:attr/textAppearanceSmall" />

           	<EditText
               	android:id="@+id/expense_edittext_note"
               	android:layout_row="4"
            	android:layout_column="1"
            	android:layout_columnSpan="2"
               	android:ems="10"
               	android:inputType="textMultiLine" />

      		<Button
          		android:id="@+id/expense_button_ok"
          		android:layout_row="5"
            	android:layout_column="0"
          		style="?android:attr/buttonBarButtonStyle"
          		android:text="@string/expense_button_ok" />

      		<Button
	        	android:id="@+id/expense_button_cancel"
	        	android:layout_row="5"
            	android:layout_column="1"
            	android:layout_columnSpan="2"
               	style="?android:attr/buttonBarButtonStyle"
	        	android:text="@string/expense_button_cancel" />
   
	</GridLayout>
</ScrollView>